<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuitem_sort"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="never"
        android:title="@string/ui_menu_sort">
    </item>
    <item
        android:id="@+id/menuitem_filter"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="never"
        android:title="@string/ui_menu_filter">
    </item>
    <item
        android:id="@+id/menuitem_Logout"
        android:icon="@drawable/ic_action_log"
        app:showAsAction="always"
        android:title="@string/ui_menu_add" />
    <item
        android:id="@+id/menuitem_eventlist"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="always"
        android:title="@string/event_list" />
    <item
        android:id="@+id/menuitem_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/ui_menu_add" />
    <item
        android:id="@+id/menuItem_my_reported_events"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/ui_menu_reported_events" />
    <item
        android:id="@+id/menuitem_approved"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom"
        android:title="@string/ui_menu_approved" />
    <item
        android:id="@+id/menuitem_ownsummary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/ui_menu_OwnSummary">
    </item>
    <item
        android:id="@+id/menuitem_appsummary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/ui_menu_AppSummary">
    </item>

</menu>