<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#404040"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

     >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_card_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEventDetails"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:text="@string/Event_Details"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/eventDetailsBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="@string/event_details_btn" />


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/remove_btn" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/edit_btn" />

        <Button
            android:id="@+id/buttonComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/comment_btn" />

        <Button
            android:id="@+id/buttonApproval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/approval_btn" />

        <Button
            android:id="@+id/buttonRejected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/report_btn" />

    </LinearLayout>
</LinearLayout>