<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signUp_title"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:layout_marginTop="70dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="385dp"
        android:layout_height="69dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="20dp"
        android:hint="@string/email_hint"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="385dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawablePadding="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/approval_green"
        android:text="@string/signUP_btn" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/login_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/googleImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/fbImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/twitterImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/twitter" />

    </LinearLayout>

</LinearLayout>
