<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#404040"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_card_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEventDetails"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:text="@string/Event_Details"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commentsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_title"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/noCommentsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comments"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>


    </LinearLayout>
</LinearLayout>